--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(228,228,228);
+  font-size: 1.25em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  margin: 2rem auto;
+  max-width: 1170px;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading {
+  margin: 0 5rem;
+  font-size: larger;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1.15rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.color {
+  margin: 0 1.5rem;
+  width: 30%;
+  height: 2rem;
+  border-radius: 5px;
+  border: #fff;
+  font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.btn {
+  background-color: rgb(112,112,112);
+  padding: 0 0.75rem;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: large;
+}
+
+.error {
+  margin: 0 auto;
+  max-width: 500px;
+  width: 80%;
+  padding: 0.85rem; 
+}
+
+.display-colors {
+  width: 70vw;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 0 auto;
+}
+
+.rgbcolors {
+  height: 160px;
+  border-radius: 10px;
+  padding: 0 10px; 
+  cursor: pointer;
+}
+
+.colors-bright {
+  color: #fff;
+}
+
+
+
+@media screen and (max-width: 960px) {
+  .container{
+    margin: 0.25rem 0;
   }
-  to {
-    transform: rotate(360deg);
+  .display-colors {
+    margin: 0 0.85rem;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
